<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_no_internet">Internet not connected</string>
    <string name="txt_empty_string" />
    <string name="movies">Popular Movies</string>
    <string name="movie_backdrop">Movie Backdrop Image</string>
    <string name="plot">Movie Plot</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="txt_rating">Rating</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="no_internet">No internet</string>
    <string name="txt_refresh">Refresh</string>
    <string name="cast">Cast</string>
    <string name="txt_cast">Cast</string>
    <string name="share">Share</string>
    <string name="img_video_thumb">Video Thumbnail</string>
    <string name="play_thumb">Play Thumbnail</string>
    <string name="txt_see_all">See All</string>
    <string name="txt_trailers">Trailers</string>
    <string name="txt_reviews">Reviews</string>
    <string name="review_person">Review Person Avatar</string>
    <string name="favorite">Favorite</string>
    <string name="txt_favorite">Favorite</string>
    <string name="no_fav">no_favourite_icon</string>
    <string name="love">love_icon</string>
    <string name="txt_to_add_favorites">to add favorites</string>
    <string name="txv_please_click">Please click</string>
    <string name="txt_no_fav_one">You seem to have no favorite movies</string>
</resources>
